2004-06-11  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.3
	* Documentation/news.texi: Update.

	* configure.ac: Remove WindowMaker/libwraster check

2004-05-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32ServerEvent.m (-windowEventProc:::) Added
	handling of size and move events and extracted end of resize event
	handling into the same new method. PAINT now always validates the
	whole window.
	Patch by MA Garcias <lists@tragnarion.com>.
	New method [-resizeBackingStoreFor:] used for end of resize events.

2004-05-13 17:11  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m (-advancementForGlyph:): Return a zero size for
	control glyphs.

	(-positionOfGlyph:precededByGlyph:isNominal:): Check if either glyph
	is a control glyph before converting to freetype glyph indices.

2004-05-12  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/win32/WIN32Geometry.h: (GSWindowOriginToMS) corrected computation.
	* Source/win32/WIN32Server.m (-orderwindow:::) Removed obsolte
	"return" in non-NSWindowOut case and use flag SWP_NOACTIVATE.
	(-placewindow::, -movewindow::) Don't use flag SWP_NOREDRAW.
	Patch by MA Garcias <lists@tragnarion.com>.
	* Source/win32/WIN32ServerEvent.m Corrected definition of the
	GET_X_LPARAM and GET_Y_LPARAM macros.
	
2004-03-30 01:49  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGGLFormat.m (-initWithAttributes:): Fix handling of
	15bpp and 16bpp modes (NSOpenGLPFAAccumSize).

2004-02-29 21:42  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.h, Source/art/ftfont.m: Add
	-drawGlyphs::at::to::::::alpha::color::::transform:drawinfo: method.

	* Source/art/ARTContext.m (-GSShowGlyphs::): Use it if the
	destination window has an alpha buffer.

	(-initWithContextInfo:): Try to find a DirectColor or TrueColor
	visual before falling back on the default visual.

2004-02-28  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.2

2004-02-28  Fred Kiefer <FredKiefer@gmx.de>
